--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,18 +1,26 @@
-<!--
-  Generated template for the SignupPage page.
+<div class="component"
+padding>
+<div class="icon">
+  <ion-icon name="analytics"
+    color="primary"></ion-icon>
+</div>
+<div class="inputs">
+  <ion-item color="light">
+    <ion-label floating>Username</ion-label>
+    <ion-input type="text"></ion-input>
+  </ion-item>
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+  <ion-item color="light">
+    <ion-label floating>Password</ion-label>
+    <ion-input type="password"></ion-input>
+  </ion-item>
 
-  <ion-navbar>
-    <ion-title>signup</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+  <button ion-button>Register</button>
+</div>
+<div class="footer">
+  <button ion-button
+    clear
+    small
+    (click)="goToLogin()">Sigin</button>
+</div>
+</div>
