--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -8,9 +8,9 @@
     [formGroup]="signupForm"
     (ngSubmit)="onSubmit()">
     <ion-item color="light">
-      <ion-label>Username</ion-label>
-      <ion-input type="text"
-        [formControlName]="'username'"></ion-input>
+      <ion-label>Email</ion-label>
+      <ion-input type="email"
+        [formControlName]="'email'"></ion-input>
     </ion-item>
 
     <ion-item color="light">
