--- a/src/pages/portfolio/portfolio.html
+++ b/src/pages/portfolio/portfolio.html
@@ -1,18 +1,37 @@
-<!--
-  Generated template for the PortfolioPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>portfolio</ion-title>
+  <ion-navbar color="primary">
+    <ion-title color="light">My Portfolio</ion-title>
+    <ion-buttons end
+      color="light">
+      <button ion-button
+        icon-only
+        (click)="goToNewOperation()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <ion-card color="primary">
+    <ion-card-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <span>Total portfolio</span>
+            <p class="total">{{ total?.total | number:'1.0-0' }}$</p>
+          </ion-col>
+          <ion-col>
+            <span>Profit</span>
+            <p class="profit">{{ total?.profit | number:'1.0-0' }}$</p>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
