New operation page: Change text button edit or add

--- a/src/pages/new-operation/new-operation.html
+++ b/src/pages/new-operation/new-operation.html
@@ -42,7 +42,7 @@
     <div class="buttons">
       <button full
         ion-button
-        (click)="onSubmit()">Add</button>
+        (click)="onSubmit()">{{ editMode ? 'Edit' : 'Add' }}</button>
     </div>
   </form>
 </ion-content>
