Signin page: improve template

--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -1,6 +1,6 @@
 <div class="component"
   padding>
-  <div class="icon">
+  <div class="main-icon">
     <ion-icon name="analytics"
       color="primary"></ion-icon>
   </div>
@@ -24,7 +24,8 @@
       <ion-toggle [formControlName]="'remember'"></ion-toggle>
     </ion-item>
 
-    <button ion-button>Login</button>
+    <button ion-button
+      type="submit">Login</button>
   </form>
   <div class="footer">
     <button ion-button
