--- a/src/pages/coins/coins.html
+++ b/src/pages/coins/coins.html
@@ -27,7 +27,7 @@
       no-padding>
       <h2 float-start>{{ item.name }}</h2>
       <p float-end>
-        {{ item.priceUSD | number:'1.1-4' }}$
+        {{ item.price | number:'1.1-4' }}{{ moneyValue | symbol }}
       </p>
       <ion-icon name="arrow-up"
         item-end
